# FileReader

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
include/: FileReaderC.hpp  FileReaderCpp.hpp
includes/: Common.h  Common.hpp  FileReaderApp.hpp  FileReaderC.h  FileReaderC.hpp  FileReaderCpp.h  FileReaderCpp.hpp  IFileReader.h  IFileReader.hpp
src/: FileReaderApp.cpp  FileReaderC.cpp  FileReaderCpp.cpp  main.cpp
