cmake_minimum_required(VERSION 3.10)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY bin)
project(FileReader)
include_directories(includes)
set(SOURCES "includes/FileReaderC.hpp" "includes/FileReaderCpp.hpp" "includes/Common.hpp" "includes/IFileReader.hpp" "src/main.cpp" "src/FileReaderC.cpp" "src/FileReaderCpp.cpp")
add_executable(FileReader ${SOURCES})